initial position impact: hole impact